@@ -24,6 +24,9 @@ contributing to this release.
   versions of this control. I have changed this so the state of the
   check box is preserved in all cases.
 
+- You can now right-click on directories in the parent directory list to
+  display a menu of commands.
+
 + Syntax Highlighting Changes:
 
 - CHILL (CCITT recommendation language) syntax highlighting added
